Actualización del formulario matricula

--- a/WindowsFormsApp1/WindowsFormsApp1/Form1.resx
+++ b/WindowsFormsApp1/WindowsFormsApp1/Form1.resx
@@ -120,81 +120,80 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAACU0lEQVRIS62UTUhUURSALafwJ8gwJCoIrcbZlKVtigKpyI0ItSqoRbUyV7UxNzEF5lBUTAuXQURB
-        YSAqWZgOLayN0EZT0Bl1HMt5MyWM86NQfJ03ncCxNzqP/OBj7jn33Hvf/WHyVjIHxZNQYMTZYSSZCSdZ
-        MlJcBvIjCepnoFBL7RNJcl4m/G4kuGtOGE7QKO2maJJd4UUq0ovJosYi+3SIPeRLe2TCp6EYpZrKILKI
-        Uz7ivrmgpnJDJj4RjlOl4ZrI7jbLTj5HUtRqKjvz85SkjyWJR1M5IfUfxFENsyNne1oKf8gF7tRUTsyl
-        KJed39Rwdb5CkTZtYY6bW6BMQ2vkUlujS7g0tIV5rOInDa2R8/9pPkUNbSFjPeK4htZMLzAWjHNBw+wM
-        /nsUszEqgzEaNLRGntxGbWbnHWWOPn7l9xFwvMezqZ9q7VmbEYMtw1E6vsyzR1OWFPUwIbLMqeJuvIXd
-        HNcSa3yTFAwZBIfCdGrKkm2v8ZR0QBYDonfrK2q0PJOPIU4NfuOxhpZsf0Z12XPIwRHRXfrC4mX2hzg5
-        EOSlL8QhTWWw+wnjIjYc0KF/eBugqneKMTHuA0fvJLXSvvdmmmazf287rRXtkIvl7fjlNz0uA58PR7ef
-        /Wa700+zOCF2yWvb4HxAlesRrOKU6yFep1cuXurTE9rloIdRkRV2HWjLcsF2qXFz+4gbMrzDYe3+f462
-        4DrWAsv0a9f6UXuDYZG012nT9PpR18itM9fAtK7Jxt9GrjRcobL+Kojrfzx/OXeJgbMXLd55Bnl5vwG6
-        FAx/9zebXQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rQAAAK0BVE7WMAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJTSURBVEhLrZRN
+        SFRRFIAtp/AnyDAkKgitxtmUpW2KAqnIjQi1KqhFtTJXtTE3MQXmUFRMC5dBREFhICpZmA4trI3QRlPQ
+        GXUcy3kzJYzzo1B8nTedwLE3Oo/84GPuOffce9/9YfJWMgfFk1BgxNlhJJkJJ1kyUlwG8iMJ6megUEvt
+        E0lyXib8biS4a04YTtAo7aZokl3hRSrSi8mixiL7dIg95Et7ZMKnoRilmsogsohTPuK+uaCmckMmPhGO
+        U6XhmsjuNstOPkdS1GoqO/PzlKSPJYlHUzkh9R/EUQ2zI2d7Wgp/yAXu1FROzKUol53f1HB1vkKRNm1h
+        jptboExDa+RSW6NLuDS0hXms4icNrZHz/2k+RQ1tIWM94riG1kwvMBaMc0HD7Az+exSzMSqDMRo0tEae
+        3EZtZucdZY4+fuX3EXC8x7Opn2rtWZsRgy3DUTq+zLNHU5YU9TAhssyp4m68hd0c1xJrfJMUDBkEh8J0
+        asqSba/xlHRAFgOid+srarQ8k48hTg1+47GGlmx/RnXZc8jBEdFd+sLiZfaHODkQ5KUvxCFNZbD7CeMi
+        NhzQoX94G6Cqd4oxMe4DR+8ktdK+92aaZrN/bzutFe2Qi+Xt+OU3PS4Dnw9Ht5/9ZrvTT7M4IXbJa9vg
+        fECV6xGs4pTrIV6nVy5e6tMT2uWgh1GRFXYdaMtywXapcXP7iBsyvMNh7f5/jrbgOtYCy/Rr1/pRe4Nh
+        kbTXadP0+lHXyK0z18C0rsnG30auNFyhsv4qiOt/PH85d4mBsxct3nkGeXm/AboUDH/3N5tdAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADqklEQVRIS5WWfUwbZQDG39BYh/Frmo044/xIjBqaTIMJypwyNz/+MNFtIIvGzOyPuYEZmm06l5L4
-        PaSj1/ba0ivYOZYaBk7iRjayQBgMylpxjRhZ2VJaPvrBCpQCHfh27PHuvIiMA48n+eWSt+/7/N43d7kr
-        +W/UxKhRqwz5i3EbMWZJU5cfNWGeynnWGas74cNPtb0LqK3x4Z6V5tmMZ44NrXzEvp2Qz9OkpcrC73Db
-        95W/09nZFBbjS10H7j7swL1ax+yqp21jGU9yB3nRCqli6QiCKruX3kjNYDGSU0k8vsEG1eUiqHxFuFOn
-        vblKY0w+uM7KEcLdIVXJRxRwl2iKXsdSOKq7cN+HRUir34hHXyvF5rd/wMuvH7+hVum3SFXyEQR2Wxf9
-        a2YSSzEzPYnPvmpA3s7jCPij4hhX0UXVKmarVCUfUVDhoTPT42hvvYLp6+N82Tg62q6i8UyPiMfdJ47d
-        Cmf1KBNwVjedmhiFvqwdiXgM08kxsAYXDn/dJuKo9Ihjt2KzuJUJbJZOmpyK8TdzeVSYO5UJKswumohH
-        UPhBA0auhTA1EcWBjxuxa+dpWfbsauBPGoGVdSkUsO10MhFCNNwP4SoQCQUx2C9PeCgozrHy6xQJLGwb
-        f4JBflfLw2K6oFBgaqWjsQAKttYiGvFjfCyI9945iVdynbK89UYNhPlmY6tCgbGFxkf8WC5mQ4sygdnQ
-        TGPDveAsLfx96OV3dwVV9vMw6ptksbLNEOazTLMyAcs00VjUhxPONgyHL2Nk2Ie6mgs4WnVeFmd1K4T5
-        Jn2TMoGJOccL/uQXKSfo78bePfUpdRpTQog+XapbGEFgLG+k4cFu5L35IwYCXv4U3Xi3oAabXjw2j317
-        68XffnY2YdNjZTCuL7753eaDE5lryvvX3HXkBalyfv4RnKXRkBdK6O35Fa+u/QaT2c+jb0s+wvt3I2HX
-        IvNhJiD7jRAEBt0ZGhn8DZfcLghXAa/HBXdHxzz+8F5EteMc2NX5CGZtROET+/FJjhYRtgQl7xvG0gmz
-        XqqdiyBgdA10IODBvuI69F29iNCAB4c+PYniwtp56EpPoYo7C+PqAvRn5f4rGLaUQLvDMJpOyp+Tauci
-        CPRlv9ChYCeU0NPdjpce+haJ7BwMbMtD9MBuxDktNGsZPyGm26XauQgf/ax1lddsllP8+/20InZsr4Ym
-        Q4fS7I9SX+QeimseONJ3f7ohW6pcGDXRZ/Inkf3L8n+sIPoNCx9TQv4GispuBu7p2+YAAAAASUVORK5C
-        YII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rQAAAK0BVE7WMAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAOqSURBVEhLlZZ9
+        TBtlAMbf0FiH8WuajTjj/EiMGppMgwnKnDI3P/4w0W0gi8bM7I+5gRmabTqXkvg9pKPX9trSK9g5lhoG
+        TuJGNrJAGAzKWnGNGFnZUlo++sEKlAId+Hbs8e68iIwDjyf55ZK37/v83jd3uSv5b9TEqFGrDPmLcRsx
+        ZklTlx81YZ7KedYZqzvhw0+1vQuorfHhnpXm2Yxnjg2tfMS+nZDP06SlysLvcNv3lb/T2dkUFuNLXQfu
+        PuzAvVrH7KqnbWMZT3IHedEKqWLpCIIqu5feSM1gMZJTSTy+wQbV5SKofEW4U6e9uUpjTD64zsoRwt0h
+        VclHFHCXaIpex1I4qrtw34dFSKvfiEdfK8Xmt3/Ay68fv6FW6bdIVfIRBHZbF/1rZhJLMTM9ic++akDe
+        zuMI+KPiGFfRRdUqZqtUJR9RUOGhM9PjaG+9gunr43zZODrarqLxTI+Ix90njt0KZ/UoE3BWN52aGIW+
+        rB2JeAzTyTGwBhcOf90m4qj0iGO3YrO4lQlslk6anIrxN3N5VJg7lQkqzC6aiEdQ+EEDRq6FMDURxYGP
+        G7Fr52lZ9uxq4E8agZV1KRSw7XQyEUI03A/hKhAJBTHYL094KCjOsfLrFAksbBt/gkF+V8vDYrqgUGBq
+        paOxAAq21iIa8WN8LIj33jmJV3Kdsrz1Rg2E+WZjq0KBsYXGR/xYLmZDizKB2dBMY8O94Cwt/H3o5Xd3
+        BVX28zDqm2Sxss0Q5rNMszIByzTRWNSHE842DIcvY2TYh7qaCzhadV4WZ3UrhPkmfZMygYk5xwv+5Bcp
+        J+jvxt499Sl1GlNCiD5dqlsYQWAsb6ThwW7kvfkjBgJe/hTdeLegBptePDaPfXvrxd9+djZh02NlMK4v
+        vvnd5oMTmWvK+9fcdeQFqXJ+/hGcpdGQF0ro7fkVr679BpPZz6NvSz7C+3cjYdci82EmIPuNEAQG3Rka
+        GfwNl9wuCFcBr8cFd0fHPP7wXkS14xzY1fkIZm1E4RP78UmOFhG2BCXvG8bSCbNeqp2LIGB0DXQg4MG+
+        4jr0Xb2I0IAHhz49ieLC2nnoSk+hijsL4+oC9Gfl/isYtpRAu8Mwmk7Kn5Nq5yII9GW/0KFgJ5TQ092O
+        lx76FonsHAxsy0P0wG7EOS00axk/Iabbpdq5CB/9rHWV12yWU/z7/bQidmyvhiZDh9Lsj1Jf5B6Kax44
+        0nd/uiFbqlwYNdFn8ieR/cvyf6wg+g0LH1NC/gaKym4G7unb5gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAALAAAACwARRqq2kAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAADeklEQVRIS7WUe0xTVxzHj8DtPeeW24ZHrzwKYxYaH4CPCYQYqtmMMf4xfIBLjMa4GE2mEgmaGQHT
-        AOWhfUAxqxSkBJ+Iy2Yyo9my+JcmxhAXLEIiWEZiqfbGKCZTefgbtx7bP1baYtgn+f1xvr/z+33PPefc
-        g+aLDBmXSkGHC8/SxNMj6zWNnlSlsYRKC0teauPIP63HYOuaJlGjMpVR+fNhkDk/U9HQnR3fOLg2qX60
-        vEgvTtuOwWR3NezZcEbUCKZqOnV+SPucxRnuH9RUiA++3QNTZbtgqup7mG46BJLBzMUqmP7VAOUlppea
-        JIuVlkWGWtawo5CvHh8u2gKTJZthat+2oAYzNwwwc8cEVfusE2qV5QgtD02yrGl7saLC+6agECY3bQhr
-        8OqmCdavbPaosLWItpgbFlk1BexJ98SK1TBZWBDW4MWFesjTmt0q3KyjLUKjjan5cyAlD95n5/oN7n79
-        HezX/vjiK8HgWp7Q6CxMa/Ad8t8tpyA3zTwmZyyraHlopEMtZX/wvE/X+gycqzaCLq7arZUbHDJkXkGn
-        +a7pY/0JWJZkfCp9MZX9kKS2UpJq30mHAb6MqjHc5td9kAwupRe/zSR1fQRZ1TTtJyv+9L2sBKOTQ60p
-        VPIjLZLk9zzHSxwuKgVYtuhU3+u4DLgqbH6nYetuIaSPoakI0cvY5PZHsdfcgDMcQ1QMkBtVOTSozIEs
-        pvYvhNoYKkdIG4MF+x9cZf87/roIJKW9jyYC5ERVur5hKjwsMmmp5EfaDlawD2Ch4x6V/GBk/IJV2R9y
-        ZX1v+W4R5Mf7P+CEc7U0HSA9uq40TVa/lQ79SAeJhfansZVPAKd1jXxUYRGDTCtxov0K0VwYl3J8y3Nf
-        kNzeoIsMCjN7BbGqc4wvfwIK/TMgqV0iTmx34mTHKLf2hjf2wCOf/in4Q4PAxtt/p+WhwfisDgsOt+Lg
-        bPOjY+HjsAuw0PkMI0sGbTE3OKZZRxZ3efhds833usLH7mHg1Je9Mq71P1scFEJsZXLtbxPK4mEIF4qN
-        /UDiOsc57lwxLY+MWZMWufqXl0rdEAQLfvV94JJ7RUxsd1lkzqRl8wPLfqri4npEZbYTlDkDIFf9LBLS
-        MYpx22OMbQ4GWdbQqZ8PZs7u50i3V6l+CITtoNd0gSHRth0k+rwHR9v+HwMJ6SGL+Afyg9C/P8TSxC/Y
-        TJ0AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAA
+        rQAAAK0BVE7WMAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAN6SURBVEhLtZR7
+        TFNXHMePwO0955bbhkevPApjFhofgI8JhBiq2Ywx/jF8gEuMxrgYTaYSCZoZAdMA5aF9QDGrFKQEn4jL
+        ZjKj2bL4lybGEBcsQiJYRmKp9sYoJlN5+Bu3Hts/Vtpi2Cf5/XG+v/P7fc8959yD5osMGZdKQYcLz9LE
+        0yPrNY2eVKWxhEoLS15q48g/rcdg65omUaMylVH582GQOT9T0dCdHd84uDapfrS8SC9O247BZHc17Nlw
+        RtQIpmo6dX5I+5zFGe4f1FSID77dA1Nlu2Cq6nuYbjoEksHMxSqY/tUA5SWml5oki5WWRYZa1rCjkK8e
+        Hy7aApMlm2Fq37agBjM3DDBzxwRV+6wTapXlCC0PTbKsaXuxosL7pqAQJjdtCGvw6qYJ1q9s9qiwtYi2
+        mBsWWTUF7En3xIrVMFlYENbgxYV6yNOa3SrcrKMtQqONqflzICUP3mfn+g3ufv0d7Nf++OIrweBantDo
+        LExr8B3y3y2nIDfNPCZnLKtoeWikQy1lf/C8T9f6DJyrNoIurtqtlRscMmReQaf5rulj/QlYlmR8Kn0x
+        lf2QpLZSkmrfSYcBvoyqMdzm132QDC6lF7/NJHV9BFnVNO0nK/70vawEo5NDrSlU8iMtkuT3PMdLHC4q
+        BVi26FTf67gMuCpsfqdh624hpI+hqQjRy9jk9kex19yAMxxDVAyQG1U5NKjMgSym9i+E2hgqR0gbgwX7
+        H1xl/zv+uggkpb2PJgLkRFW6vmEqPCwyaankR9oOVrAPYKHjHpX8YGT8glXZH3JlfW/5bhHkx/s/4IRz
+        tTQdID26rjRNVr+VDv1IB4mF9qexlU8Ap3WNfFRhEYNMK3Gi/QrRXBiXcnzLc1+Q3N6giwwKM3sFsapz
+        jC9/Agr9MyCpXSJObHfiZMcot/aGN/bAI5/+KfhDg8DG23+n5aHB+KwOCw634uBs86Nj4eOwC7DQ+Qwj
+        SwZtMTc4pllHFnd5+F2zzfe6wsfuYeDUl70yrvU/WxwUQmxlcu1vE8riYQgXio39QOI6xznuXDEtj4xZ
+        kxa5+peXSt0QBAt+9X3gkntFTGx3WWTOpGXzA8t+quLiekRlthOUOQMgV/0sEtIxinHbY4xtDgZZ1tCp
+        nw9mzu7nSLdXqX4IhO2g13SBIdG2HST6vAdH2/4fAwnpIYv4B/KD0L8/xNLEL9hMnQAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAACbElEQVRIS62TS2hTQRSGpwvXbam7lgq6VPCxquJGdy6Epln6qKvqSkFXQVpSH7ViCxUUlaYuarWg
-        TcX6QpsqSTSBxNYkJZHEVJJIKqUKiujyHs/cnjlNBsdLY3/44Z6Z83/n3suMcFKH8Lagk2jQLNdaqK12
-        dYheD4J+uoT3hFt4u6Tls1yTe9S2NgFAPbpR+vimq1c6my6XVa0s1+RexVo9xc3CpjZ0Hl2rZLaNcNXC
-        jTp0SXb9pwroOsKuChdb7e31USthV4WLzSt766JmwlYLN0Yty1ppqUGUHSXc33Wkof/h0cZ+qMkNlyYJ
-        Yxaebx/avkwXDozB6e03+HKd3XvbtqrP7Lhp96gaPUwYs/ASDapANvoZZkbmGBCfytpWtdyTPapGDxDG
-        LLypPSqQCRUhdDfFgPhjHIBWdfjePKSDBa7xZncTxiy36D2lAomXCxCdyDBAHxD1ZyDxIs81fv1JwpiF
-        jcdUQMLePckxQB8w+zRX9cvw5ToJYxZ+pksFIg/SkJxeYIA+IBX4BG/vp7nG39tOGLPwM/erQHAsBZlw
-        kQH6gA9vShC8k+QaX24fYczCxl0qEPDNwcdYmQH6gHy8DNPDs1y7xbmdhDGrXZzfogLPr8egkFpigD6g
-        OL8Ez67FuMZftJkwZh0U3o0qMDUYgXL2KwP0AYu5b/BoIMK1S/Q1EcasLnFrgwr4+8KwXPzOAH3AcukH
-        TFwMcS2zhPm3sPm3DHj2jMB49ysGDB2ehKFDfq7He16DZ7dP1b8o7ixs/qIga/AixZ2FzTNa2NF4vAMU
-        dxY2b8NQAm1VQgy28PS8xyO6leIVEuIPvcHJE91qkE0AAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAJsSURBVEhLrZNL
+        aFNBFIanC9dtqbuWCrpU8LGq4kZ3LoSmWfqoq+pKQVdBWlIftWILFRSVpi5qtaBNxfpCmypJNIHE1iQl
+        kcRUkkgqpQqK6PIez9yeOU0Gx0tjf/jhnpnzf+fey4xwUofwtqCTaNAs11qorXZ1iF4Pgn66hPeEW3i7
+        pOWzXJN71LY2AUA9ulH6+KarVzqbLpdVrSzX5F7FWj3FzcKmNnQeXatkto1w1cKNOnRJdv2nCug6wq4K
+        F1vt7fVRK2FXhYvNK3vrombCVgs3Ri3LWmmpQZQdJdzfdaSh/+HRxn6oyQ2XJgljFp5vH9q+TBcOjMHp
+        7Tf4cp3de9u2qs/suGn3qBo9TBiz8BINqkA2+hlmRuYYEJ/K2la13JM9qkYPEMYsvKk9KpAJFSF0N8WA
+        +GMcgFZ1+N48pIMFrvFmdxPGLLfoPaUCiZcLEJ3IMEAfEPVnIPEizzV+/UnCmIWNx1RAwt49yTFAHzD7
+        NFf1y/DlOgljFn6mSwUiD9KQnF5ggD4gFfgEb++nucbf204Ys/Az96tAcCwFmXCRAfqAD29KELyT5Bpf
+        bh9hzMLGXSoQ8M3Bx1iZAfqAfLwM08OzXLvFuZ2EMatdnN+iAs+vx6CQWmKAPqA4vwTPrsW4xl+0mTBm
+        HRTejSowNRiBcvYrA/QBi7lv8GggwrVL9DURxqwucWuDCvj7wrBc/M4AfcBy6QdMXAxxLbOE+bew+bcM
+        ePaMwHj3KwYMHZ6EoUN+rsd7XoNnt0/VvyjuLGz+oiBr8CLFnYXNM1rY0Xi8AxR3FjZvw1ACbVVCDLbw
+        9LzHI7qV4hUS4g+9wckT3WqQTQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
